--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CKYEP8H84Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CKYEP8H84Y');
+</script>
 <body>
     <div id="body">
          <div class="main-Image">
